# neoml

NeoML/: CMakeLists.txt
NeoML/Python/: tests.py
NeoML/Python/neoml/: PythonWrapper.cp38-win_amd64.pyd
NeoOnnx/: CMakeLists.txt
TestOnnx/: CMakeLists.txt  main.cpp
